# dcl

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/dcl/: CMakeLists.txt  dcl.h
include/dcl/ADT/: ByteOrder.h  PlatformTypeWrapper.h
include/dcl/Basic/: Basic.h  Compilers.h  MetaMacros.h  OS.h  RuntimeAssertions.h
include/dcl/Binary/Darwin/: CMakeLists.txt  Collections.h  Fat.h  Format.h  Iterators.h  MachO.h  MachOView.h  Targets.h  Traits.h  Utilities.h
include/dcl/Binary/Darwin/Dyld/: BindOpcode.def  BindSubOpcode.def  DyldFixupChains.h  DyldInfo.h  Traits.h
include/dcl/BlobGen/: BlobGen.h  BlogGen.h
include/dcl/Driver/: Driver.h
include/dcl/IO/: File.h  Permissions.h
include/dcl/OS/: File.h
include/dcl/Platform/: ByteOrder.h  Triple.h  TypeWrapper.h
include/dcl/Platform/Triple/: Arch.def  OS.def  SubArch.def  Vendor.def
lib/: CMakeLists.txt
lib/ADT/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  RuntimeAssertions.cpp
lib/Binary/: CMakeLists.txt
lib/BlobGen/: BlobGen.cpp  CMakeLists.txt
lib/Driver/: CMakeLists.txt
lib/IO/: CMakeLists.txt  File.cpp
lib/OS/: CMakeLists.txt  File.cpp
lib/Platform/: CMakeLists.txt  Triple.cpp
tests/: CMakeLists.txt
tests/unittests/: CMakeLists.txt
tests/unittests/blobs/macOS/: empty_swift
tests/unittests/dcl/: CMakeLists.txt
tests/unittests/dcl/Binary/: CMakeLists.txt
tests/unittests/dcl/Binary/Darwin/: MachOTests.cpp  MachOViewTests.cpp
tests/unittests/dcl/IO/: CMakeLists.txt  FileTests.cpp
tests/unittests/dcl/OS/: CMakeLists.txt  FileTests.cpp
tools/: CMakeLists.txt
tools/blobgen/: CMakeLists.txt  main.cpp
